Fixed container spacing

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -87,6 +87,8 @@ main {
 } */
 
 header {
+    border-style: solid;
+    border-color: black;
 	margin: 1rem auto;
 	/* display: grid; */
 	/* grid-template-columns: 4; */
@@ -96,6 +98,8 @@ header {
 }
 
 .hero{
+    border-style: solid;
+    border-color: black;
     position: relative !important;
     width: 100%;
     height: auto;
@@ -140,6 +144,8 @@ header {
   } */
 
 .article {
+    border-style: solid;
+    border-color: black;
     background-color: #E4DFDA;
     display: block;
     /* position: absolute; */
@@ -162,7 +168,7 @@ header {
     justify-content: center;
     margin: auto;
     width: 100%;
-    height: 100px;
+    height: 100%;
     align-content: center;
 }
 
@@ -182,11 +188,15 @@ header {
 }
 
 #two {
-    margin-top: 10vw;
+    border-style: solid;
+    border-color: black;
+	margin: 1rem auto;
 }
   
 #three {
-    margin-top: 30vw;
+    border-style: solid;
+    border-color: black;
+	margin: 1rem auto;
 }
 
 .history-img {  
